# RAG_project_RAGAS_eval

./: Dockerfile.ui  RAGAS_dataset.csv  README.md  docker-compose.yml  main.py  pyproject.toml  questions.py  rag_chat_ui.py  rag_eval_ui.py  rag_evaln.py
experiements/: ragas_eval2.csv
outputs/: experiment_results.csv  question_wise_results.csv
outputs/archive/: experiment_results.csv
prometheus/: prometheus.yml
src/: chunking.py  config.py  embedding.py  ingestion.py  pipeline.py  rag_builder.py  reranker.py  retrieval.py  test.py  utils.py  vector_store.py
src/monitoring/: metrics.py
ui/: 1_Chat.py
ui/pages/: 2_Evaluation.py
